<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>wetterstrom</groupId>
	<artifactId>jfuncgen</artifactId>
	<version>0.2</version>
	<name>JFuncGen</name>
	<description>Java GUI for MHS5200 and FY6900 function generators</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<sonar.language>java</sonar.language>
		<jfuncgen.java.version>21</jfuncgen.java.version>
		<buildNumber>${maven.build.timestamp}</buildNumber>
	</properties>

    <!-- Check plugins:      mvn versions:display-plugin-updates           -->
    <!-- Check dependencies: mvn versions:display-dependency-updates       -->
    <!-- Build:              mvn clean package assembly:single sonar:sonar -->

	<build>
		<plugins>

			<!-- compile -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<release>${jfuncgen.java.release}</release>
				</configuration>
			</plugin>

			<!-- jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
								<addClasspath>true</addClasspath>
								<classpathPrefix>lib/</classpathPrefix>
								<mainClass>se.wetterstrom.jfuncgen.JFuncGen</mainClass>
						</manifest>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifestEntries>
							<JFuncGen-Build>${maven.build.timestamp}</JFuncGen-Build>
							<JFuncGen-Release>${project.version}</JFuncGen-Release>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<!-- source jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- java doc jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<configuration>
					<source>${jfuncgen.java.release}</source>
					<detectJavaApiLink>false</detectJavaApiLink>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- SonarQube scanner -->
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.9.0.2155</version>
			</plugin>

			<!-- JaCoCo -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>default-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules />
						</configuration>
					</execution>
				</executions>
			</plugin>		

            <!-- assembly -->
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-assembly-plugin</artifactId>
			    <configuration>
			        <descriptors>
			            <descriptor>src/main/assembly/assembly.xml</descriptor>
			        </descriptors>
			    </configuration>
			</plugin>

			<!-- Extra JVM heap size for Sonarqube -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.3</version>
				<configuration>
					<argLine>${argLine} -Xmx1G</argLine>
					<!--  workaround for openjdk -->
					<forkCount>0</forkCount>
				</configuration>
			</plugin>
		
		</plugins>
	</build>
	
	<dependencies>
		<!-- check if updates available: mvn versions:display-dependency-updates  -->

		<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
		<dependency>
			<groupId>com.fazecast</groupId>
			<artifactId>jSerialComm</artifactId>
			<version>2.11.0</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
		    <groupId>net.objecthunter</groupId>
		    <artifactId>exp4j</artifactId>
		    <version>0.4.8</version>
			<scope>compile</scope>
		</dependency>

		<!-- jUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.17.0</version>
			<scope>test</scope>
		</dependency>
  	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
			</plugin>
		</plugins>
	</reporting>
	
</project>
